crates/hwp-core/tests/snapshots/snapshot_tests__issue144_fields_crossing_lineseg_boundary_html.snap
---
source: crates/hwp-core/tests/snapshot_tests.rs
assertion_line: 622
expression: html
---
<!DOCTYPE html>
<html>
<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">

<head>
  <title></title>
  <meta http_quiv="content-type" content="text/html; charset=utf-8">
  <style>
body {margin:0;padding-left:0;padding-right:0;padding-bottom:0;padding-top:2mm;}
.hce {margin:0;padding:0;position:absolute;overflow:hidden;}
.hme {margin:0;padding:0;position:absolute;}
.hhe {margin:0;padding:0;position:relative;}
.hhi {display:inline-block;margin:0;padding:0;position:relative;background-size:contain;}
.hls {margin:0;padding:0;position:absolute;}
.hfS {margin:0;padding:0;position:absolute;}
.hcD {margin:0;padding:0;position:absolute;}
.hcI {margin:0;padding:0;position:absolute;}
.hcS {margin:0;padding:0;position:absolute;}
.hfN {margin:0;padding:0;position:relative;}
.hmB {margin:0;padding:0;position:absolute;}
.hmO {margin:0;padding:0;position:absolute;}
.hmT {margin:0;padding:0;position:absolute;}
.hpN {display:inline-block;margin:0;padding:0;position:relative;white-space:nowrap;}
.htC {display:inline-block;margin:0;padding:0;position:relative;vertical-align:top;overflow:hidden;}
.haN {display:inline-block;margin:0;padding:0;position:relative;}
.hdu {margin:0;padding:0;position:relative;}
.hdS {margin:0;padding:0;position:absolute;}
.hsC {margin:0;padding:0;position:absolute;}
.hsR {margin:0;padding:0;position:absolute;}
.hsG {margin:0;padding:0;position:absolute;}
.hsL {margin:0;padding:0;position:absolute;}
.hsT {margin:0;padding:0;position:absolute;overflow:hidden;}
.hsE {margin:0;padding:0;position:absolute;overflow:hidden;}
.hsA {margin:0;padding:0;position:absolute;overflow:hidden;}
.hsP {margin:0;padding:0;position:absolute;overflow:hidden;}
.hsV {margin:0;padding:0;position:absolute;overflow:hidden;}
.hsO {margin:0;padding:0;position:absolute;}
.hsU {margin:0;padding:0;position:absolute;overflow:hidden;}
.hpi {margin:0;padding:0;position:absolute;}
.hch {margin:0;padding:0;position:absolute;}
.hcG {margin:0;padding:0;position:absolute;}
.heq {margin:0;padding:0;position:absolute;}
.heG {margin:0;padding:0;position:absolute;}
.htA {margin:0;padding:0;position:absolute;}
.hvi {margin:0;padding:0;position:absolute;}
.htb {margin:0;padding:0;position:absolute;}
.htG {margin:0;padding:0;position:absolute;}
.hfJ {margin:0;padding:0;position:absolute;}
.hfG {margin:0;padding:0;position:absolute;}
.hfB {margin:0;padding:0;position:absolute;}
.hfR {margin:0;padding:0;position:absolute;}
.hfC {margin:0;padding:0;position:absolute;}
.hfO {margin:0;padding:0;position:absolute;}
.hfL {margin:0;padding:0;position:absolute;}
.hfM {margin:0;padding:0;position:absolute;}
.hfE {margin:0;padding:0;position:absolute;}
.hpl {margin:0;padding:0;position:absolute;}
.hs {margin:0;padding:0;position:absolute;overflow:visible;}
.hpa {position:relative;padding:0;overflow:hidden;margin-left:2mm;margin-right:0mm;margin-bottom:2mm;margin-top:0mm;border:1px black solid;box-shadow:1mm 1mm 0 #AAAAAA;}
.hpa::after {content:'';position:absolute;margin:0;padding:0;left:0;right:0;top:0;bottom:0;background-color:white;z-index:-2;}
.hrt {display:inline-block;margin:0;padding:0;position:relative;white-space:inherit;vertical-align:middle;line-height:1.1;}
.hco {display:inline-block;margin:0;padding:0;position:relative;white-space:inherit;}
.hcc {margin:0;padding:0;position:absolute;}
.hls {clear:both;}
[onclick] {cursor:pointer;}
.cs0 {
  font-size:10pt;color:rgb(0,0,0);font-family:"굴림";
}
.cs1 {
  font-size:10pt;color:rgb(0,0,0);font-family:"바탕";
}
.cs2 {
  font-size:9pt;color:rgb(0,0,0);font-family:"굴림";
}
.cs3 {
  font-size:9pt;color:rgb(0,0,0);font-family:"굴림";letter-spacing:-0.03em;
}
.cs4 {
  font-size:9pt;color:rgb(0,0,0);font-family:"바탕";letter-spacing:-0.03em;
}
.cs5 {
  font-size:32pt;color:rgb(0,0,0);font-family:"바탕";
}
.cs6 {
  font-size:32pt;color:rgb(0,0,255);font-family:"바탕";
}
.ps0 {
  text-align:justify;margin-bottom:0.56mm;
}
.ps1 {
  text-align:justify;padding-left:14.11mm;margin-bottom:0.56mm;
}
.ps2 {
  text-align:justify;padding-left:21.17mm;margin-bottom:0.56mm;
}
.ps3 {
  text-align:justify;padding-left:28.22mm;margin-bottom:0.56mm;
}
.ps4 {
  text-align:justify;padding-left:35.28mm;margin-bottom:0.56mm;
}
.ps5 {
  text-align:justify;padding-left:42.33mm;margin-bottom:0.56mm;
}
.ps6 {
  text-align:justify;padding-left:49.39mm;margin-bottom:0.56mm;
}
.ps7 {
  text-align:justify;padding-left:10.58mm;margin-bottom:0.56mm;
}
.ps8 {
  text-align:justify;margin-bottom:0.53mm;line-height:0.02;
}
.ps9 {
  text-align:justify;padding-left:7.06mm;margin-bottom:0.56mm;
}
.ps10 {
  text-align:justify;text-indent:-9.24mm;margin-bottom:0.46mm;line-height:0.01;
}
.ps11 {
  text-align:justify;margin-bottom:0.56mm;
}
@media print {
.hpa {margin:0;border:0 black none;box-shadow:none;}
body {padding:0;}
}
  </style>
</head>


<body>
<div class="hpa" style="width:210mm;height:297mm;"><div class="hcD" style="left:30mm;top:35mm;"><div class="hcI"><div class="hls ps11" style="line-height:11.29mm;white-space:nowrap;left:0.00mm;top:0.00mm;height:11.29mm;width:150.00mm;"><span class="hrt cs5" style="font-size:32pt;color:rgb(0,0,0);">google google google&nbsp;</span></div><div class="hls ps11" style="line-height:11.29mm;white-space:nowrap;left:0.00mm;top:18.06mm;height:11.29mm;width:150.00mm;"><span class="hrt cs6" style="font-size:32pt;color:rgb(0,0,255);"><u>google google google</u></span></div><div class="hls ps11" style="line-height:11.29mm;white-space:nowrap;left:0.00mm;top:36.12mm;height:11.29mm;width:150.00mm;"><span class="hrt cs5" style="font-size:32pt;color:rgb(0,0,0);">gmail gmail gma</span><span class="hrt cs6" style="font-size:32pt;color:rgb(0,0,255);"><u>il gmail&nbsp;</u></span></div><div class="hls ps11" style="line-height:11.29mm;white-space:nowrap;left:0.00mm;top:54.19mm;height:11.29mm;width:150.00mm;"><span class="hrt cs6" style="font-size:32pt;color:rgb(0,0,255);"><u>gmail gmail</u></span></div><div class="hls ps11" style="line-height:11.29mm;white-space:nowrap;left:0.00mm;top:72.25mm;height:11.29mm;width:150.00mm;"><span class="hrt cs6" style="font-size:32pt;color:rgb(0,0,255);"><u>gmai</u></span><span class="hrt cs5" style="font-size:32pt;color:rgb(0,0,0);">le</span></div></div></div></div></body>

</html>
